# skeleton.lv2

./: .gitmodules  CMakeLists.txt  README.md  project.h.in
cmake/: CXXStandard.cmake  CXXWarnings.cmake  FindStaticGLEW.cmake  FindStaticLibrary.cmake  LV2Project.cmake  TargetLibpd.cmake  TargetNanoVG.cmake  TargetNanoVG_impl.c  TargetPugl.cmake
examples/: ui-gl-nanovg.cc  ui-gl.cc  ui-gtk2.cc  ui-gtk3.cc  ui-qt4.cc  ui-qt5.cc  ui-tk.cc
puredata/: patch.pd  pd.ini
resources/: Roboto-Bold.ttf.c  Roboto-Regular.ttf.c
sources/: description.cc  effect.cc  ui.cc
sources/framework/: description.h  effect.h  lv2all.h  lv2manifest.cc  lv2plugin.cc  lv2ui.cc  ui.h
sources/meta/: project.h
sources/utility/: pd-common.cc  pd-common.h  pd-miniparser.cc  pd-miniparser.h  pd-patchinfo.cc  pd-patchinfo.h  scope-guard.h  sys-signal.h  sys-signal.tcc
tools/: makelv2manifest.cc
